feat(admin): 添加技能管理页面并重构AI代码生成架构